--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hi</title>
-    <link rel=" stylesheet" href = "index.css"
-</head>
-<body>
-    <section class = "container"></section>
-    <div class = "card" > </div>
-    <div class = "card" > </div>
-    <div class = "card" ></div>
-        
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Genshin Merchandise</title>
+    <link rel=" stylesheet" href="index.css" />
+  </head>
+  <body>
+    <section class="titlecontainer">
+      <h1 class="titlewebsite">Genshin Merch :D</h1>
+    </section>
+    <section class="container">
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+      <div class="card"></div>
+    </section>
+  </body>
 </html>
