--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Genshin Merchandise</title>
     <link rel=" stylesheet" href="index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Epunda+Slab:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <section class="titlecontainer">
       <h1 class="titlewebsite">Genshin Merch :D</h1>
     </section>
     <section class="container">
-      <div class="card"></div>
+      <div class="card">
+        <h2 class="wanderer_card">
+          Wanderer Scaramouche Cat Hanging Plush Toys
+        </h2>
+        <img src="Wanderer cat.webp" alt="Wanderer Cat" />
+      </div>
+
       <div class="card"></div>
       <div class="card"></div>
       <div class="card"></div>
