--- a/index.html
+++ b/index.html
@@ -13,19 +13,29 @@
   </head>
   <body>
     <section class="titlecontainer">
-      <h1 class="titlewebsite">Genshin Merch :D</h1>
+      <h1 class="titlewebsite">Genshin Merch</h1>
     </section>
     <section class="container">
       <div class="card">
-        <h2 class="wanderer_card">
-          Wanderer Scaramouche Cat Hanging Plush Toys
-        </h2>
-        <img src="Wanderer cat.webp" alt="Wanderer Cat" />
+        <img src="s.webp" alt="Wanderer Cat" />
+        <h2>Scaramouche Cat Home Theme Pet Bed</h2>
+        <h3>$95.90</h3>
       </div>
-
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
+      <div class="card">
+        <img src="Klee.webp" />
+        <h2>Genshin Impact Klee Bomb Sling Water Bottle</h2>
+        <h3>$57.90</h3>
+      </div>
+      <div class="card">
+        <img src="zhongli.webp" />
+        <h2>Zhongli Impression Series Crystal Aromatherapy Gift Box</h2>
+        <h3>$129.90</h3>
+      </div>
+      <div class="card">
+        <img src="Official-Yae-Miko-Bracelet.webp" />
+        <h2>Yae Miko Impression Bracelet/Necklace</h2>
+        <h3>$49.90</h3>
+      </div>
       <div class="card"></div>
       <div class="card"></div>
       <div class="card"></div>
