--- a/index.html
+++ b/index.html
@@ -17,33 +17,102 @@
     </section>
     <section class="container">
       <div class="card">
-        <img src="s.webp" alt="Wanderer Cat" />
-        <h2>Scaramouche Cat Home Theme Pet Bed</h2>
-        <h3>$95.90</h3>
+        <img src="wa.webp" alt="Wanderer Cat" />
+        <h2>Wanderer Impression Brooch</h2>
+        <h3>$49.90</h3>
+        <a
+         href="https://genshinfans.com/products/official-wanderer-impression-brooch">
+        <button>Purchase</button>
+        </a>
       </div>
       <div class="card">
         <img src="Klee.webp" />
-        <h2>Genshin Impact Klee Bomb Sling Water Bottle</h2>
+        <h2>Klee Bomb Sling Water Bottle</h2>
         <h3>$57.90</h3>
+        <a href="https://genshinfans.com/products/official-klee-bomb-sling-water-bottle">
+          <button>Purchase</button>
+        </a>
       </div>
       <div class="card">
         <img src="zhongli.webp" />
         <h2>Zhongli Impression Series Crystal Aromatherapy Gift Box</h2>
         <h3>$129.90</h3>
+        <a href="https://genshinfans.com/products/official-zhongli-crystal-aromatherapy-gift-box">
+            <button>Purchase</button>
+        </a>
       </div>
       <div class="card">
         <img src="Official-Yae-Miko-Bracelet.webp" />
         <h2>Yae Miko Impression Bracelet/Necklace</h2>
         <h3>$49.90</h3>
+        <a href="https://genshinfans.com/products/official-miko-bracelet-necklace">
+          <button>Purchase</button>
+        </a>
       </div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
-      <div class="card"></div>
+      <div class="card">
+        <img src="raiden.webp" >
+        <h2>The Statue of Her Excellency Raiden Shogun</h2>
+        <h3>$99.90</h3>
+        <a href="https://genshinfans.com/products/official-the-statue-of-her-excellency-raiden-shogun">
+          <button>Purchase</button>
+        </a>
+        </div>
+      <div class="card">
+        <img src="childe.webp" >
+        <h2>Resplendent Feast Tartaglia Merchandise</h2>
+        <h3>$219.90</h3>
+        <a href="https://genshinfans.com/products/genshin-resplendent-feast-tartaglia-merch">
+          <button>Purchase</button>
+        </a>
+      </div>
+      <div class="card">
+        <img src="ZT01_c02358e5-66ab-42ea-99ee-822358617b7e.webp" >
+        <h2> Furina Sweet Afternoon Ode Chibi Figure</h2>
+        <h3>$109.90</h3>
+        <a href="https://genshinfans.com/products/official-furina-chibi-figure">
+          <button>Purchase</button>
+        </a>
+      </div>
+      <div class="card">
+        <img src="Kazuha.webp" >
+        <h2>Kaedehara Kazuha Action Figure with Clothes and Accessories</h2>
+        <h3>$169.90</h3>
+        <a href="https://genshinfans.com/products/official-kazuha-action-figure-with-clothes">
+          <button>Purchase</button>
+        </a>
+      </div>
+      <div class="card">
+        <img src="n.webp" >
+        <h2>Neuvillette Afternoon Tea Cup Set</h2>
+        <h3>$89.90</h3>
+        <a href="https://genshinfans.com/products/official-neuvillette-afternoon-tea-cup-set">
+          <button>Purchase</button>
+        </a>
+      </div>
+      <div class="card">
+        <img src="a.webp" >
+        <h2>Arlecchino Impression Crystal Aromatherapy Gift Box</h2>
+        <h3>$119.90</h3>
+        <a href="https://genshinfans.com/products/official-arlecchino-crystal-aromatherapy-gift-box">
+          <button>Purchase</button>
+        </a>
+      </div>
+      <div class="card">
+        <img src="v.webp" >
+        <h2>Venti Impression Envelope Bag & Tote Bag</h2>
+        <h3>$114.90</h3>
+        <a href="https://genshinfans.com/products/official-venti-clutch-tote-bag">
+          <button>Purchase</button>
+        </a>
+      </div>
+      <div class="card">
+        <img src="al.webp" >
+        <h2>Alhaitham Impression Travel Size Perfume Gift Set</h2>
+        <h3>$74.90</h3>
+        <a href="https://genshinfans.com/products/official-alhaitham-travel-size-perfume-gift-set">
+          <button>Purchase</button>
+        </a>
+      </div>
     </section>
   </body>
 </html>
