--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <section class="titlecontainer">
-      <h1 class="titlewebsite">Genshin Merch</h1>
+      <h1 class="titlewebsite">Genshin Merchandise</h1>
     </section>
     <section class="container">
       <div class="card">
