--- a/index.html
+++ b/index.html
@@ -83,8 +83,10 @@
         <img src="ZT01_c02358e5-66ab-42ea-99ee-822358617b7e.webp" />
         <h2>Furina Sweet Afternoon Ode Chibi Figure</h2>
         <h3>$109.90</h3>
-        <a href="https://genshinfans.com/products/official-furina-chibi-figure"
-          >alt="."
+        <a
+          href="https://genshinfans.com/products/official-furina-chibi-figure"
+          alt="."
+        >
           <button>Purchase</button>
         </a>
       </div>
@@ -138,6 +140,96 @@
         <h3>$74.90</h3>
         <a
           href="https://genshinfans.com/products/official-alhaitham-travel-size-perfume-gift-set"
+          alt="."
+        >
+          <button>Purchase</button>
+        </a>
+      </div>
+      <div class="card">
+        <img src="di.webp" />
+        <h2>Diluc Impression Messenger Bag</h2>
+        <h3>$111.90</h3>
+        <a
+          href="https://genshinfans.com/products/official-diluc-messenger-bag"
+          alt="."
+        >
+          <button>Purchase</button>
+        </a>
+      </div>
+      <div class="card">
+        <img src="xiao.webp" />
+        <h2>Genshin Impact Xiao Vigilant Yaksha Ver. 1/7 Scale Figure</h2>
+        <h3>$259.90</h3>
+        <a
+          href="https://genshinfans.com/products/official-xiao-vigilant-1-7-scale-figure"
+          alt="."
+        >
+          <button>Purchase</button>
+        </a>
+      </div>
+      <div class="card">
+        <img src="hutao.webp" />
+        <h2>Hu Tao Chibi Happy Shake Figure Stand</h2>
+        <h3>$29.90</h3>
+        <a
+          href="https://genshinfans.com/products/official-hu-tao-happy-shake-ornament"
+          alt="."
+        >
+          <button>Purchase</button>
+        </a>
+      </div>
+      <div class="card">
+        <img rel="images" src="Nahida.webp" />
+        <h2>Nahida Impression Hairpin</h2>
+        <h3>$38.90</h3>
+        <a
+          href="https://genshinfans.com/products/official-merchandise-nahida-impression-hairpin"
+          alt="."
+        >
+          <button>Purchase</button>
+        </a>
+      </div>
+      <div class="card">
+        <img src="wrio.webp" />
+        <h2>Genshin Impact Wriothesley Action Figure Doll</h2>
+        <h3>$169.90</h3>
+        <a
+          href="https://genshinfans.com/products/official-wriothesley-action-figure"
+          alt="."
+        >
+          <button>Purchase</button>
+        </a>
+      </div>
+      <div class="card">
+        <img src="kinich.webp" />
+        <h2>
+          Genshin Impact Kinich Theme Impression Double Layer Short Necklace
+        </h2>
+        <h3>$69.90</h3>
+        <a
+          href="https://genshinfans.com/products/official-kinich-double-layer-necklace"
+          alt="."
+        >
+          <button>Purchase</button>
+        </a>
+      </div>
+      <div class="card">
+        <img src="citlali.webp" />
+        <h2>Genshin Impact Citlali Obsidian Opalstar Ver. 1/8 Scale Figure</h2>
+        <h3>$109.90</h3>
+        <a
+          href="https://genshinfans.com/products/official-genshin-citlali-1-8-figure"
+          alt="."
+        >
+          <button>Purchase</button>
+        </a>
+      </div>
+      <div class="card">
+        <img src="albedo.webp" />
+        <h2>Genshin Impact Albedo Theme Impression Brooch</h2>
+        <h3>$52.90</h3>
+        <a
+          href="https://genshinfans.com/products/official-albedo-theme-impression-brooch"
           alt="."
         >
           <button>Purchase</button>
