--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1 class="titlewebsite">Genshin Merchandise</h1>
     </section>
     <section class="container">
-      <div class="card">
+      <!-- <div class="card">
         <img src="wa.webp" alt="." />
         <h2>Wanderer Impression Brooch</h2>
         <h3>$49.90</h3>
@@ -24,6 +24,7 @@
           href="https://genshinfans.com/products/official-wanderer-impression-brooch"
         >
           <button>Purchase</button>
+          <button class="Cart">Add To Cart</button>
         </a>
       </div>
       <div class="card">
@@ -234,10 +235,8 @@
         >
           <button>Purchase</button>
         </a>
-      </div>
+      </div> -->
     </section>
-    <script>
-      scr = "merch.js";
-    </script>
+    <script src="merch.js"></script>
   </body>
 </html>
