--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="titlecontainer">
       <h1 class="titlewebsite">Genshin Merchandise</h1>
     </section>
-    <section class="container">
+    <div class="container">
       <!-- <div class="card">
         <img src="wa.webp" alt="." />
         <h2>Wanderer Impression Brooch</h2>
@@ -236,7 +236,10 @@
           <button>Purchase</button>
         </a>
       </div> -->
-    </section>
+    </div>
+    <div class="Cart">
+      <p></p>
+    </div>
     <script src="merch.js"></script>
   </body>
 </html>
