--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       </div> -->
     </div>
     <div class="Cart">
-      <p></p>
+      <h2>Cart</h2>
     </div>
     <script src="merch.js"></script>
   </body>
