--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     <section class="titlecontainer">
       <h1 class="titlewebsite">Genshin Merchandise</h1>
     </section>
+    <div class="filter-container">
+      <a>
+        <button class="filter-item">All</button>
+        <button class="filter-item">Accessories</button>
+        <button class="filter-item">Figures</button>
+        <button class="filter-item">Clothing</button>
+        <button class="filter-item">In Stock</button>
+      </a>
+    </div>
     <div class="container">
       <!-- <div class="card">
         <img src="wa.webp" alt="." />
