--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="filter-container">
       <a>
         <button class="filter-item">All</button>
-        <button class="filter-item">Accessories</button>
+        <button class="filter-item">Accesories</button>
         <button class="filter-item">Figures</button>
         <button class="filter-item">Clothing</button>
         <button class="filter-item">In Stock</button>
